# ai-karaoke-maker

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
